# nix-project-cache

./: .gitignore  Cargo.toml  README.md  flake.nix
.sqlx/: query-02ea5ce5446b78b8635538ea7799d6faea448e36ca4e19170b40bccb02e998bc.json  query-053fc4d43193307e8c1b5397340ce343588f4d157637fa5e87e39d2b599100cc.json  query-073658d31c43f2c0420fd4a50099237e9f6237472cfedf502de8afc4b1c9b9d6.json  query-07c9919b506689ecf20286724176da51d5306b9787b09a7228e861e15a497809.json  query-0cb30ad39545672e4a6fc315e37ac3069b6a88a1a69a66dfd94754aa001f1e08.json  query-10662dac12c609c613792f87cd5dc20434102990f2a6663594f0154de81c8e8f.json  query-115c4d79f23f126a82b54255e6cf8f232d11a18cbe43b96a3c5b778f02808d35.json  query-121a1b92b901fe74053c4c504a12914a98d3af7be4b96f943ab396d9241e8df8.json  query-15f1e19cbcbcfc60cb36aae6ba51e4b0af049e647c852296f7e14f3336c2caea.json  query-1902fe9ee20e09bd0aa8558e2befcbf03b1a2dc6067a73cf67b40e5976359fe1.json  query-22a8d32fbb951e543d63814f18327b10ed991afbfd0648a495f952485024abdc.json  query-237ed3e69eb7fbf756263d626befdbb1f661636e84a54c5b916960e5c7729939.json  query-2584fbe15cd0c3b9f667c9faa72e072d70077620e11d3bf1651122d117c85481.json  query-276d3ceb09ff826befde0482ca60e415f33812303e5e8321e7adf907eaef3bea.json  query-28bec8abef55b8422412d34b380f16ba1fce5b3837aaa396957a48a991fe45cf.json  query-2c392ef412e552e9dad67958ca1a5f4809dc60ff5a4cde821028ef991e406628.json  query-2d95b66dc869b842533b34416146265b429d26f16e098d384a8dfead3c690251.json  query-334f50c589efcdc12409ba4dc56f1de609daf9031ebe60a1efe33ea3430f8ced.json  query-348b5ceb662a2e2c637607b6f1a998457d2d12ee7d9e8087b3022c80bb9698d3.json  query-35063eedcfd04cd2df147d848e646c7af825c984e3d565c835c078cf12bb372f.json  query-35ecff40c83802a12dfb27c88fdd4cc61b9346ea75d506ac076413a4ba6f99a9.json  query-3a3d6b41090410d1a9c83d0589b5b839315d4c1077546fc5626fda10b5f1e108.json  query-3dc8500a46da3214c64a5e2992f4979d17ae3cf6881ef1e7019027cf505b2a56.json  query-4416fb64d9c7725d835e728133e97a6eebb2b3508f3e0fdeea999fe34e0f167f.json  query-45d3d68abb2fc36984460263635007b98f538abbbe2c6d6e881adc926989a3fa.json  query-4b1b9a9e1f3fd8ed8d4e76df9d5ba1e9729568f307fb9a13b38bdcaca05d700c.json  query-4cdda149f8735ff2d84135cf818cbf84964da67fe5dd474a2fc78daf42c96870.json  query-4d5f7862fb700b7bc2270100a84e0d32667691866ba0abd4f29d3136c7a7a399.json  query-4fb9b544e664919b47e911994aaadcba73ef76af98b3b327fc45c5c6d02fc8bf.json  query-54603dc22df7cc3ba66205136c4da4c77b2dd0ded8d44d5ab7fa92d7c6834249.json  query-5614845100c0d2202f75efe06e23684a1342d8a59c51c242435cb8e2a0406a29.json  (+68 more)
crates/cache-app/: Cargo.toml
crates/cache-app/src/: config.rs  lib.rs  main.rs  storage.rs
crates/cache-app/tests/: publish_read.rs  utils.rs
crates/cache-auth/: Cargo.toml
crates/cache-auth/src/: chain.rs  lib.rs  oidc.rs  oidc_config.rs  oidc_http.rs  principal.rs  static_token.rs
crates/cache-client/: Cargo.toml
crates/cache-client/src/: client.rs  error.rs  routes.rs
crates/cache-core/: Cargo.toml
crates/cache-core/src/: cache_path.rs  key_crypto.rs  lib.rs  narinfo.rs  nix.rs  project.rs  signing.rs  storage.rs  validation.rs
crates/cache-ctl/: Cargo.toml
crates/cache-ctl/src/: cli.rs  gc.rs  keys.rs  main.rs  output.rs  pins.rs  projects.rs  tokens.rs  upstreams.rs
crates/cache-db/: Cargo.toml
crates/cache-db/migrations/: 20260417064456_init.sql  20260419155949_builds_and_path_objects.sql  20260420082641_pins_and_local_gc.sql  20260424043428_project_retention.sql
crates/cache-db/src/: access_tokens.rs  builds.rs  gc.rs  lib.rs  models.rs  objects.rs  paths.rs  pins.rs  pool.rs  project_oidc_identities.rs  project_signing_keys.rs  projects.rs  retention.rs  upstreams.rs
crates/cache-ingest/: Cargo.toml
crates/cache-ingest/src/: gc.rs  lib.rs  planner.rs  service.rs
crates/cache-push/: Cargo.toml
crates/cache-push/src/: cli.rs  git.rs  github_oidc.rs  main.rs  nix.rs  push.rs
crates/cache-push/tests/: smoke.rs
crates/cache-read/: Cargo.toml
crates/cache-read/src/: handlers.rs  lib.rs  local_objects.rs  object_provider.rs  resolver.rs  router.rs  service.rs  signing_keys.rs  state.rs  upstreams.rs
crates/cache-store/: Cargo.toml
crates/cache-store/src/: blob.rs  catalog.rs  lib.rs  local.rs  s3.rs  upstream.rs
crates/cache-test-utils/: Cargo.toml
crates/cache-test-utils/src/: db.rs  fixtures.rs  http.rs  io.rs  lib.rs  storage.rs
crates/cache-write/: Cargo.toml
crates/cache-write/src/: authz.rs  handlers.rs  lib.rs  router.rs  state.rs
crates/depot-auth/: Cargo.toml
crates/depot-auth/src/: chain.rs  error.rs  lib.rs  oidc.rs  oidc_claims.rs  oidc_config.rs  oidc_http.rs  static_token.rs
crates/depot-client/: Cargo.toml
crates/depot-client/src/: client.rs  error.rs  lib.rs  routes.rs
crates/depot-ctl/: Cargo.toml
crates/depot-ctl/src/: cli.rs  gc.rs  keys.rs  main.rs  pins.rs  projects.rs  tokens.rs  upstreams.rs
crates/depot-db/: Cargo.toml
crates/depot-db/migrations/: 20260423231817_project_oidc_identities.sql  20260424025233_access_tokens.sql  20260424080932_project_signing_keys.sql
crates/depot-db/src/: access_tokens.rs  builds.rs  gc.rs  lib.rs  models.rs  objects.rs  paths.rs  pins.rs  pool.rs  project_oidc_identities.rs  project_signing_keys.rs  projects.rs  retention.rs  upstreams.rs
crates/depot-ingest/: Cargo.toml
crates/depot-ingest/src/: gc.rs  lib.rs  planner.rs  service.rs
crates/depot-push/: Cargo.toml
crates/depot-push/src/: cli.rs  github_oidc.rs  main.rs  nix.rs  push.rs
crates/depot-push/tests/: smoke.rs
crates/depot-read/: Cargo.toml
crates/depot-read/src/: handlers.rs  lib.rs  local_objects.rs  object_provider.rs  resolver.rs  router.rs  service.rs  signing_keys.rs  state.rs  upstreams.rs
crates/depot-server/: Cargo.toml
crates/depot-server/src/: config.rs  lib.rs  main.rs  storage.rs
crates/depot-server/tests/: publish_read.rs  utils.rs
crates/depot-test-utils/: Cargo.toml
crates/depot-test-utils/src/: db.rs  fixtures.rs  http.rs  io.rs  oidc.rs  storage.rs
crates/depot-write/: Cargo.toml
crates/depot-write/src/: authz.rs  handlers.rs  lib.rs  router.rs  state.rs
(+38 files in other folders)
