[workspace]
resolver = "3"
members = [
  "crates/cache-api",
  "crates/cache-app",
  "crates/cache-auth",
  "crates/cache-client",
  "crates/cache-core",
  "crates/cache-ctl",
  "crates/cache-db",
  "crates/cache-ingest",
  "crates/cache-push",
  "crates/cache-read",
  "crates/cache-store",
  "crates/cache-test-utils",
  "crates/cache-write",
]
package.version = "0.0.1"
metadata.crane.name = "nix-project-cache"

[workspace.dependencies]
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["http1", "tokio"] }
async-trait = "0.1"
http-body-util = "0.1"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "http2",
  "json",
  "stream",
] }
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "uuid",
  "time",
] }
tempfile = "3"
figment = { version = "0.10", features = ["env", "toml"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
  "use_pem",
] }
rsa = { version = "0.9", features = ["pem"] }
chacha20poly1305 = "0.10"
getrandom = "0.4"
uuid = { version = "1", features = ["serde", "v7", "v4"] }
sha2 = "0.11"
base64 = "0.22"
hex = "0.4"
bytes = "1.11"
zstd = "0.13"
regex = "1.12"
wildmatch = "2"
clap = { version = "4.6", features = ["derive", "env"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
time = { version = "0.3", features = [
  "serde",
  "formatting",
  "parsing",
  "macros",
] }
