[package]
name = "cache-app"
edition = "2024"
version.workspace = true

[dependencies]
cache-auth = { path = "../cache-auth" }
cache-core = { path = "../cache-core" }
cache-db = { path = "../cache-db" }
cache-ingest = { path = "../cache-ingest" }
cache-read = { path = "../cache-read" }
cache-store = { path = "../cache-store" }
cache-write = { path = "../cache-write" }
anyhow.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
cache-api = { path = "../cache-api" }
cache-client = { path = "../cache-client" }
bytes.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["net"] }
uuid.workspace = true
