[package]
name = "cache-auth"
edition = "2024"
version.workspace = true

[dependencies]
cache-core = { path = "../cache-core" }
async-trait.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
wildmatch.workspace = true
subtle.workspace = true

[dev-dependencies]
cache-test-utils = { path = "../cache-test-utils" }
tempfile.workspace = true
tokio.workspace = true
