[package]
name = "cache-core"
edition = "2024"
version.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek = "2.2.0"
hex.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }
zstd.workspace = true
