[package]
name = "cache-ctl"
edition = "2024"
version.workspace = true

[dependencies]
cache-api = { path = "../cache-api" }
cache-client = { path = "../cache-client" }
cache-core = { path = "../cache-core" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
axum.workspace = true
cache-test-utils = { path = "../cache-test-utils" }
