[package]
name = "cache-db"
version = "0.1.0"
edition = "2024"

[dependencies]
cache-core = { path = "../cache-core" }
cache-store = { path = "../cache-store" }
anyhow.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
