[package]
name = "cache-db"
edition = "2024"
version.workspace = true

[dependencies]
cache-core = { path = "../cache-core" }
cache-store = { path = "../cache-store" }
anyhow.workspace = true
sqlx.workspace = true
tracing.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
