[package]
name = "cache-ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
cache-api = { path = "../cache-api" }
cache-core = { path = "../cache-core" }
cache-db = { path = "../cache-db" }
cache-store = { path = "../cache-store" }
anyhow.workspace = true
bytes.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
