[package]
name = "cache-ingest"
edition = "2024"
version.workspace = true

[dependencies]
cache-api = { path = "../cache-api" }
cache-core = { path = "../cache-core" }
cache-db = { path = "../cache-db" }
cache-store = { path = "../cache-store" }
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
cache-test-utils = { path = "../cache-test-utils" }
cache-read = { path = "../cache-read" }
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util"] }
