[package]
name = "cache-push"
edition = "2024"
version.workspace = true

[dependencies]
cache-api = { path = "../cache-api" }
cache-client = { path = "../cache-client" }
cache-core = { path = "../cache-core" }
anyhow.workspace = true
async-compression.workspace = true
bytes.workspace = true
clap.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [
  "process",
  "signal",
  "io-util",
  "fs",
  "sync",
] }
tokio-stream = "0.1"
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
cache-app = { path = "../cache-app" }
cache-auth = { path = "../cache-auth" }
cache-core = { path = "../cache-core" }
cache-store = { path = "../cache-store" }
cache-test-utils = { path = "../cache-test-utils" }
reqwest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
zstd.workspace = true
