[package]
name = "cache-read"
version = "0.1.0"
edition = "2024"

[dependencies]
cache-core = { path = "../cache-core" }
cache-store = { path = "../cache-store" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
bytes.workspace = true
uuid.workspace = true
