[package]
name = "cache-read"
edition = "2024"
version.workspace = true

[dependencies]
cache-core = { path = "../cache-core" }
cache-store = { path = "../cache-store" }
cache-db = { path = "../cache-db" }
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true
bytes.workspace = true
uuid.workspace = true
