[package]
name = "cache-store"
edition = "2024"
version.workspace = true

[dependencies]
cache-core = { path = "../cache-core" }
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
reqwest.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
tokio.workspace = true
