[package]
name = "cache-store"
edition = "2024"
version.workspace = true

[dependencies]
cache-core = { path = "../cache-core" }
anyhow.workspace = true
async-trait.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
reqwest.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
uuid.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
serde.workspace = true
axum.workspace = true
tokio.workspace = true
