[package]
name = "cache-test-utils"
edition = "2024"
version.workspace = true

[dependencies]
cache-api = { path = "../cache-api" }
cache-core = { path = "../cache-core" }
cache-db = { path = "../cache-db" }
cache-store = { path = "../cache-store" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
rsa.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
uuid.workspace = true
