[package]
name = "cache-write"
edition = "2024"
version.workspace = true

[dependencies]
cache-api = { path = "../cache-api" }
cache-auth = { path = "../cache-auth" }
cache-core = { path = "../cache-core" }
cache-db = { path = "../cache-db" }
cache-ingest = { path = "../cache-ingest" }
axum.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
cache-store = { path = "../cache-store" }
bytes.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
