[package]
name = "cache-write"
edition = "2024"
version.workspace = true

[dependencies]
cache-api = { path = "../cache-api" }
cache-auth = { path = "../cache-auth" }
cache-core = { path = "../cache-core" }
cache-store = { path = "../cache-store" }
cache-db = { path = "../cache-db" }
cache-ingest = { path = "../cache-ingest" }
thiserror.workspace = true
axum.workspace = true
reqwest.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
wildmatch.workspace = true
time.workspace = true

[dev-dependencies]
cache-test-utils = { path = "../cache-test-utils" }
cache-store = { path = "../cache-store" }
async-trait.workspace = true
bytes.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
