[package]
name = "depot-auth"
edition = "2024"
version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
wildmatch.workspace = true

[dev-dependencies]
depot-test-utils = { path = "../depot-test-utils" }
tempfile.workspace = true
tokio.workspace = true
