[package]
name = "depot-client"
edition = "2024"
version.workspace = true

[dependencies]
depot-api = { path = "../depot-api" }
depot-core = { path = "../depot-core" }
bytes.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
depot-test-utils = { path = "../depot-test-utils" }
axum.workspace = true
serde_json.workspace = true
