[package]
name = "depot-ctl"
edition = "2024"
version.workspace = true

[dependencies]
depot-api = { path = "../depot-api" }
depot-client = { path = "../depot-client" }
depot-core = { path = "../depot-core" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
axum.workspace = true
depot-test-utils = { path = "../depot-test-utils" }
