[package]
name = "depot-db"
edition = "2024"
version.workspace = true

[dependencies]
depot-core = { path = "../depot-core" }
depot-store = { path = "../depot-store" }
anyhow.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true
hex.workspace = true
sha2.workspace = true
wildmatch.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
