[package]
name = "depot-server"
edition = "2024"
version.workspace = true

[dependencies]
depot-auth = { path = "../depot-auth" }
depot-core = { path = "../depot-core" }
depot-db = { path = "../depot-db" }
depot-ingest = { path = "../depot-ingest" }
depot-read = { path = "../depot-read" }
depot-store = { path = "../depot-store" }
depot-write = { path = "../depot-write" }
anyhow.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["net"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
figment.workspace = true
serde.workspace = true

[dev-dependencies]
depot-test-utils = { path = "../depot-test-utils" }
depot-api = { path = "../depot-api" }
depot-client = { path = "../depot-client" }
bytes.workspace = true
reqwest.workspace = true
tempfile.workspace = true
