[package]
name = "depot-test-utils"
edition = "2024"
version.workspace = true

[dependencies]
depot-api = { path = "../depot-api" }
depot-core = { path = "../depot-core" }
depot-db = { path = "../depot-db" }
depot-store = { path = "../depot-store" }
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
rsa.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
uuid.workspace = true
